--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -12,17 +12,19 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
 express or implied. 
 See the License for the specific language governing permissions and 
 limitations under the License. -->
-<ribbon:RibbonWindow x:Class="xFunc.Views.MainView"
-                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:res="clr-namespace:xFunc.Resources"
-                     xmlns:ribbon="clr-namespace:Fluent;assembly=Fluent"
-                     xmlns:viewModels="clr-namespace:xFunc.ViewModels"
-                     xmlns:views="clr-namespace:xFunc.Views"
-                     Title="xFunc" Width="1024" Height="576" MinWidth="480" MinHeight="270"
-                     Icon="../Images/xFunc.ico" TextOptions.TextFormattingMode="Display"
-                     Loaded="this_Loaded">
-    <ribbon:RibbonWindow.CommandBindings>
+<ribbon:MetroWindow x:Class="xFunc.Views.MainView"
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:res="clr-namespace:xFunc.Resources"
+                    xmlns:ribbon="clr-namespace:Fluent;assembly=Fluent"
+                    xmlns:viewModels="clr-namespace:xFunc.ViewModels"
+                    xmlns:views="clr-namespace:xFunc.Views"
+                    Style="{StaticResource MetroWindowStyle}"
+                    Foreground="White"
+                    Title="xFunc" Width="1024" Height="576" MinWidth="480" MinHeight="270"
+                    Icon="../Images/xFunc.ico" TextOptions.TextFormattingMode="Display"
+                    Loaded="this_Loaded">
+    <ribbon:MetroWindow.CommandBindings>
         <CommandBinding Command="views:MainView.DegreeCommand" Executed="DegreeButton_Execute" CanExecute="AndleButtons_CanExecute" />
         <CommandBinding Command="views:MainView.RadianCommand" Executed="RadianButton_Execute" CanExecute="AndleButtons_CanExecute" />
         <CommandBinding Command="views:MainView.GradianCommand" Executed="GradianButton_Execute" CanExecute="AndleButtons_CanExecute" />
@@ -41,8 +43,8 @@ limitations under the License. -->
         <CommandBinding Command="views:MainView.AboutCommand" Executed="AboutCommand_Execute" />
         <CommandBinding Command="views:MainView.SettingsCommand" Executed="SettingsCommand_Execute" />
         <CommandBinding Command="views:MainView.ExitCommand" Executed="ExitCommand_Execute" />
-    </ribbon:RibbonWindow.CommandBindings>
-    <ribbon:RibbonWindow.InputBindings>
+    </ribbon:MetroWindow.CommandBindings>
+    <ribbon:MetroWindow.InputBindings>
         <KeyBinding Command="views:MainView.DegreeCommand" Key="D" Modifiers="Control+Alt" />
         <KeyBinding Command="views:MainView.RadianCommand" Key="R" Modifiers="Control+Alt" />
         <KeyBinding Command="views:MainView.GradianCommand" Key="G" Modifiers="Control+Alt" />
@@ -50,7 +52,7 @@ limitations under the License. -->
         <KeyBinding Command="views:MainView.AboutCommand" Key="F1" />
         <KeyBinding Command="views:MainView.SettingsCommand" Key="S" Modifiers="Alt" />
         <KeyBinding Command="views:MainView.ExitCommand" Key="F4" Modifiers="Alt" />
-    </ribbon:RibbonWindow.InputBindings>
+    </ribbon:MetroWindow.InputBindings>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -76,7 +78,7 @@ limitations under the License. -->
                 </ribbon:Button>
             </ribbon:Ribbon.ToolBarItems>
             <ribbon:Ribbon.Menu>
-                <ribbon:Backstage Header="{x:Static res:Resource.FileMenu}" Background="Black">
+                <ribbon:Backstage Header="{x:Static res:Resource.FileMenu}">
                     <ribbon:BackstageTabControl>
                         <!--<ribbon:Button Header="{x:Static res:Resource.NewMenu}" Icon="..\Images\new.png" />
                         <ribbon:Button Header="{x:Static res:Resource.OpenMenu}" Icon="..\Images\open.png" />
@@ -894,4 +896,4 @@ limitations under the License. -->
             </ribbon:StatusBarItem>
         </ribbon:StatusBar>
     </Grid>
-</ribbon:RibbonWindow>
+</ribbon:MetroWindow>
