--- a/xFunc/Views/AboutView.xaml
+++ b/xFunc/Views/AboutView.xaml
@@ -16,7 +16,7 @@ limitations under the License. -->
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:res="clr-namespace:xFunc.Resources"
-        Title="{x:Static res:Resource.AboutWindowTitle}" Width="440" Height="380" WindowStartupLocation="CenterOwner"
+        Title="{x:Static res:Resource.AboutWindowTitle}" Width="460" Height="400" WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize" ShowInTaskbar="False"
         TextOptions.TextFormattingMode="Display">
     <Grid>
@@ -34,7 +34,11 @@ limitations under the License. -->
             <Run Text="{x:Static res:Resource.HomePageTextBox}" />
             <Hyperlink x:Name="link" NavigateUri="http://xfunc.codeplex.com/">http://xfunc.codeplex.com/</Hyperlink>
         </TextBlock>
-        <GroupBox HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12,121,10,0" Height="194" Width="412" Header="Apache License 2.0">
+        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,120,0,0">
+            <Run Text="{x:Static res:Resource.DocumentationTextBox}" />
+            <Hyperlink NavigateUri="https://github.com/sys27/xFunc/wiki">https://github.com/sys27/xFunc/wiki</Hyperlink>
+        </TextBlock>
+        <GroupBox Margin="10,0,10,34" Header="Apache License 2.0" Height="194" VerticalAlignment="Bottom">
             <TextBox x:Name="license" xml:space="preserve" Margin="4" IsReadOnly="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto">Copyright 2012-2015 Dmitry Kischenko
 
 Licensed under the Apache License, Version 2.0 (the "License"); 
