--- a/xFunc/Views/AboutView.xaml
+++ b/xFunc/Views/AboutView.xaml
@@ -36,7 +36,7 @@ limitations under the License. -->
         </TextBlock>
         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,120,0,0">
             <Run Text="{x:Static res:Resource.DocumentationTextBox}" />
-            <Hyperlink NavigateUri="https://github.com/sys27/xFunc/wiki">https://github.com/sys27/xFunc/wiki</Hyperlink>
+            <Hyperlink NavigateUri="https://github.com/sys27/xFunc/wiki" RequestNavigate="DocsHyperlink_RequestNavigate">https://github.com/sys27/xFunc/wiki</Hyperlink>
         </TextBlock>
         <GroupBox Margin="10,0,10,34" Header="Apache License 2.0" Height="194" VerticalAlignment="Bottom">
             <TextBox x:Name="license" xml:space="preserve" Margin="4" IsReadOnly="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto">Copyright 2012-2015 Dmitry Kischenko
